kick away variable log_lines

--- a/playbooks/roles/info_base/tasks/_artefact.yaml
+++ b/playbooks/roles/info_base/tasks/_artefact.yaml
@@ -4,7 +4,7 @@
   throttle: 1
   ansible.builtin.lineinfile:
     line: "{{ item.checksum }}"
-    path: "{{ tmp_dir }}/Artefact.log"
+    path: "{{ tmp_dir }}/artefact.log"
   register: _known
 
 - name: Work on new artefact
@@ -58,7 +58,7 @@
       throttle: 1
       ansible.builtin.lineinfile:
         line: "{{ item.checksum }}"
-        path: "{{ tmp_dir }}/Artefact.log"
+        path: "{{ tmp_dir }}/artefact.log"
         state: absent
 
   always:
