--- a/playbooks/roles/info_tor/tasks/onionoo.yaml
+++ b/playbooks/roles/info_tor/tasks/onionoo.yaml
@@ -5,14 +5,13 @@
     url: "https://onionoo.torproject.org/details?search={{ _fingerprint_hashed }}"
     return_content: true
     status_code: [200, 404]
-  register: _result
+  register: _uri
 
 - name: File onionoo
   delegate_to: localhost
   throttle: 1
-  when: _bridges
   vars:
-    _bridges: "{{ _result.json.bridges[0] | default([]) }}"
+    _bridges: "{{ _uri.json.bridges[0] | default([]) }}"
   ansible.builtin.lineinfile:
     line: >-
       {{ inventory_hostname }}
@@ -22,3 +21,4 @@
       running: {{ _bridges.running | default('-') }}
     path: "{{ tmp_dir }}/tor_onionoo"
     regexp: "^{{ inventory_hostname }} "
+    state: "{{ _uri.content | ternary('present', 'absent') }}"
