--- a/playbooks/roles/info_tor/tasks/main.yaml
+++ b/playbooks/roles/info_tor/tasks/main.yaml
@@ -79,7 +79,7 @@
       tags:
         - systemd-time
 
-    - name: Version of Tor
+    - name: Version
       ansible.builtin.import_tasks: version.yaml
       tags:
         - version
