--- a/playbooks/roles/setup_common/tasks/system-config.yaml
+++ b/playbooks/roles/setup_common/tasks/system-config.yaml
@@ -109,14 +109,8 @@
         path: /etc/default/apport
         regexp: "^enabled="
 
-- name: Do not run Git cleanup in background
-  when: ansible_facts.memtotal_mb < 4096 or ansible_facts.processor_vcpus < 4
-  changed_when: false
-  ansible.builtin.command:
-    cmd: git config --global --add gc.autoDetach false
-
 - name: Create swap file for small RAM
-  when: ansible_facts.memtotal_mb < 2048
+  when: ansible_facts.memtotal_mb < 2048 and (kernel_build_from_source or tor_port is defined)
   ansible.builtin.shell:
     cmd: |-
       set -euf
