--- a/playbooks/roles/setup_common/tasks/update-apt.yaml
+++ b/playbooks/roles/setup_common/tasks/update-apt.yaml
@@ -1,5 +1,6 @@
 ---
 - name: De-activate unattended-upgrades
+  failed_when: false # not yet installed at first run
   ansible.builtin.systemd_service:
     name: unattended-upgrades
     state: stopped
