--- a/playbooks/roles/setup_common/tasks/nginx.yaml
+++ b/playbooks/roles/setup_common/tasks/nginx.yaml
@@ -17,7 +17,7 @@
   ansible.builtin.cron:
     name: restart {{ _service }} if systemd refused to do it
     job: >-
-      systemctl is-failed {{ _service }} && systemctl start {{ _service }}
+      systemctl is-failed {{ _service }} 1>/dev/null && systemctl start {{ _service }}
 
 - name: HTTPs for nginx
   when: metrics_port
