--- a/playbooks/roles/setup_autoupdate/handlers/main.yaml
+++ b/playbooks/roles/setup_autoupdate/handlers/main.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Reload Systemd
-  listen: Reload Systemd
+- name: Reload systemd
+  listen: Reload systemd
   ansible.builtin.systemd_service:
     daemon_reload: true
