--- a/playbooks/roles/setup_common/tasks/base.yaml
+++ b/playbooks/roles/setup_common/tasks/base.yaml
@@ -14,14 +14,14 @@
   ansible.builtin.copy:
     src: 00sshd.conf
     dest: /etc/ssh/sshd_config.d/
-  notify: Reload SSH
+  notify: Reload ssh
 
 - name: Remove SSHd config for cloud init at IONOS systems
   when: ansible_facts.system_vendor == 'QEMU'
   ansible.builtin.file:
     path: /etc/ssh/sshd_config.d/50-cloud-init.conf
     state: absent
-  notify: Reload SSH
+  notify: Reload ssh
 
 - name: Ensure exactly 1 entry in authorized_keys
   changed_when: false
