--- a/playbooks/roles/setup_snowflake/handlers/main.yaml
+++ b/playbooks/roles/setup_snowflake/handlers/main.yaml
@@ -1,6 +1,6 @@
 ---
-- name: Reload Systemd
-  listen: Reload Systemd
+- name: Reload systemd
+  listen: Reload systemd
   ansible.builtin.systemd_service:
     daemon_reload: true
 
