--- a/playbooks/roles/setup_tor/tasks/tor-dist.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-dist.yaml
@@ -49,7 +49,7 @@
   ansible.builtin.template:
     src: tor.override.conf.j2
     dest: /etc/systemd/system/tor@default.service.d/override.conf
-  notify: Reload Systemd
+  notify: Reload systemd
 
 - name: Set sysctl max user namespaces
   ansible.posix.sysctl:
