--- a/playbooks/roles/setup_tor/tasks/tor-src.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-src.yaml
@@ -21,10 +21,10 @@
     _git_patches: "{{ tor_git_patches }}"
     _remove_git_repo: "{{ tor_remove_git_repo }}"
     _repo_dir: /root/tor
-  ansible.builtin.include_tasks: "{{ playbook_dir }}/roles/lib/_git.yaml"
+  ansible.builtin.include_tasks: "{{ role_path }}/../../../roles/lib/_git.yaml"
 
 - name: Build
-  when: _git_repo_changed or tor_git_patches
+  when: _git_repo_changed
   changed_when: true
   ansible.builtin.shell:
     cmd: |-
