--- a/examples/systems-hcloud.yaml
+++ b/examples/systems-hcloud.yaml
@@ -33,7 +33,7 @@ hsx:
 htx:
   vars:
     nickname: "xxxxxxxxx{{ ((seed_address + seed_host) | md5)[0:10] }}"
-    # secret_family_key: "{{ playbook_dir }}/../secrets/keys/xxxxxxxxx.secret_family_key"
+    # secret_family_key: "{{ role_path }}/../../../secrets/keys/xxxxxxxxx.secret_family_key"
     tor_build_from_source: false
     torrc_config_hosts:
       - name: MaxAdvertisedBandwidth
@@ -41,7 +41,7 @@ htx:
       # - name: FamilyId
       #   value: ...
       # - name: MyFamily
-      #   value: "{{ (lookup('ansible.builtin.file', playbook_dir + '/../secrets/gxxxxxxxxx-MyFamily.txt', errors='ignore') |
+      #   value: "{{ (lookup('ansible.builtin.file', role_path + '/../../../secrets/gxxxxxxxxx-MyFamily.txt', errors='ignore') |
       #     regex_replace('#.*\n', '') | split('\n') | sort)[0:359] | join(',') }}"
   children:
     ht:
