--- a/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
@@ -15,7 +15,7 @@
     _git_patches: "{{ snowflake_git_patches }}"
     _remove_git_repo: "{{ snowflake_remove_git_repo }}"
     _repo_dir: /root/snowflake
-  ansible.builtin.include_tasks: "{{ role_path }}/../../../roles/lib/_git.yaml"
+  ansible.builtin.include_tasks: "{{ role_path }}/../../../playbooks/roles/lib/_git.yaml"
 
 - name: Build
   throttle: 10
