--- a/playbooks/roles/lib/_git.yaml
+++ b/playbooks/roles/lib/_git.yaml
@@ -32,32 +32,29 @@
         force: true
       register: __updated
 
-- name: Git remove untracked files "{{ _repo_dir }}"
-  changed_when: __cleaned.stdout
-  ansible.builtin.command:
-    cmd: git clean --force
-    chdir: "{{ _repo_dir }}"
-  register: __cleaned
+    - name: Git clean "{{ _repo_dir }}"
+      changed_when: __cleaned.stdout
+      ansible.builtin.command:
+        cmd: git clean --force
+        chdir: "{{ _repo_dir }}"
+      register: __cleaned
 
-- name: Git apply patches "{{ _repo_dir }}"
-  changed_when: __patched.stdout_lines is search('patching file ')
-  throttle: 16
-  ansible.builtin.shell:
-    cmd: |-
-      set -euf
+    - name: Git patch "{{ _repo_dir }}"
+      changed_when: __patched.stdout_lines is search('patching file ')
+      ansible.builtin.shell:
+        cmd: |-
+          set -euf
 
-      rm -f tmp.patch
-      curl -s {{ item }} -o tmp.patch
-      patch -p 1 <tmp.patch
-      rm tmp.patch
-    chdir: "{{ _repo_dir }}"
-  loop: "{{ _git_patches }}"
-  register: __patched
+          rm -f tmp.patch
+          curl -s {{ item }} -o tmp.patch
+          patch -p 1 <tmp.patch
+          rm tmp.patch
+        chdir: "{{ _repo_dir }}"
+      loop: "{{ _git_patches }}"
+      register: __patched
 
 - name: Git repo changed "{{ _repo_dir }}"
-  changed_when: _git_repo_changed
-  vars:
-    __do_rebuild: "{{ force_rebuild is defined and force_rebuild | bool }}"
   ansible.builtin.set_fact:
     _git_repo_changed: "{{  __repo.changed or __repo.before == None or
-      __updated.changed or __cleaned.changed or __patched.changed or __do_rebuild }}"
+      __updated.changed or __cleaned.changed or __patched.changed or
+      force_rebuild is defined and force_rebuild | bool }}"
