--- a/examples/systems-hcloud.yaml
+++ b/examples/systems-hcloud.yaml
@@ -33,7 +33,7 @@ hsx:
 htx:
   vars:
     nickname: "xxxxxxxxx{{ ((seed_address + seed_host) | md5)[0:10] }}"
-    # secret_family_key: "{{ role_path }}/../../../secrets/keys/xxxxxxxxx.secret_family_key"
+    # tor_secret_family_key_file: "{{ role_path }}/../../../secrets/keys/xxxxxxxxx.secret_family_key"
     tor_build_from_source: false
     torrc_config_hosts:
       - name: MaxAdvertisedBandwidth
