--- a/playbooks/roles/lib/_git.yaml
+++ b/playbooks/roles/lib/_git.yaml
@@ -13,55 +13,54 @@
     update: false
   register: __repo
 
-- name: Git
-  throttle: 16
-  block:
-    - name: Git clone "{{ _repo_dir }}"
-      when: __repo.before == None
-      throttle: 2
-      ansible.builtin.git:
-        repo: "{{ _git_repo_url }}"
-        dest: "{{ _repo_dir }}"
-        version: "{{ _git_version }}"
+- name: Git clone "{{ _repo_dir }}"
+  when: __repo.before == None
+  throttle: 2
+  ansible.builtin.git:
+    repo: "{{ _git_repo_url }}"
+    dest: "{{ _repo_dir }}"
+    version: "{{ _git_version }}"
 
-    - name: Git update "{{ _repo_dir }}"
-      ansible.builtin.git:
-        repo: "{{ _git_repo_url }}"
-        dest: "{{ _repo_dir }}"
-        version: "{{ _git_version }}"
-        force: true
-      register: __updated
+- name: Git update "{{ _repo_dir }}"
+  throttle: "{{ _git_patches | ternary(8, 16) }}"
+  ansible.builtin.git:
+    repo: "{{ _git_repo_url }}"
+    dest: "{{ _repo_dir }}"
+    version: "{{ _git_version }}"
+    force: true
+  register: __updated
 
-    - name: Git remove old branches "{{ _repo_dir }}"
-      changed_when: __inactive.stdout
-      when: git_remove_inactive_branches is defined and git_remove_inactive_branches | bool
-      ansible.builtin.shell:
-        cmd: >-
-          git branch | grep -vF '*' | xargs -r git branch -D
-        chdir: "{{ _repo_dir }}"
-        executable: /bin/bash
-      register: __inactive
+- name: Git remove inactive branches "{{ _repo_dir }}"
+  changed_when: __inactive.stdout
+  when: git_remove_inactive_branches is defined and git_remove_inactive_branches | bool
+  ansible.builtin.shell:
+    cmd: >-
+      git branch | grep -vF '*' | xargs -r git branch -D
+    chdir: "{{ _repo_dir }}"
+    executable: /bin/bash
+  register: __inactive
 
-    - name: Git clean "{{ _repo_dir }}"
-      changed_when: __cleaned.stdout
-      ansible.builtin.command:
-        cmd: git clean --force
-        chdir: "{{ _repo_dir }}"
-      register: __cleaned
+- name: Git clean "{{ _repo_dir }}"
+  changed_when: __cleaned.stdout
+  ansible.builtin.command:
+    cmd: git clean --force
+    chdir: "{{ _repo_dir }}"
+  register: __cleaned
 
-    - name: Git patch "{{ _repo_dir }}"
-      changed_when: __patched.stdout_lines is search('patching file ')
-      ansible.builtin.shell:
-        cmd: |-
-          set -euf
+- name: Git patch "{{ _repo_dir }}"
+  throttle: "{{ _git_patches | ternary(8, 16) }}"
+  changed_when: __patched.stdout_lines is search('patching file ')
+  ansible.builtin.shell:
+    cmd: |-
+      set -euf
 
-          rm -f tmp.patch
-          curl -s {{ item }} -o tmp.patch
-          patch -p 1 <tmp.patch
-          rm tmp.patch
-        chdir: "{{ _repo_dir }}"
-      loop: "{{ _git_patches }}"
-      register: __patched
+      rm -f tmp.patch
+      curl -s {{ item }} -o tmp.patch
+      patch -p 1 <tmp.patch
+      rm tmp.patch
+    chdir: "{{ _repo_dir }}"
+  loop: "{{ _git_patches }}"
+  register: __patched
 
 - name: Git repo changed "{{ _repo_dir }}"
   ansible.builtin.set_fact:
