--- a/playbooks/roles/info_tor/tasks/fingerprints.yaml
+++ b/playbooks/roles/info_tor/tasks/fingerprints.yaml
@@ -2,7 +2,8 @@
 - name: Get fingerprint
   changed_when: false
   ansible.builtin.command:
-    cmd: cut -f 2 -d ' ' /var/lib/tor/fingerprint
+    cmd: >-
+      cut -f 2 -d ' ' /var/lib/tor/fingerprint
   register: _result
 
 - name: Set fact _fingerprint
@@ -13,7 +14,8 @@
 - name: Get ED25519 fingerprint
   changed_when: false
   ansible.builtin.command:
-    cmd: cut -f 2 -d ' ' /var/lib/tor/fingerprint-ed25519
+    cmd: >-
+      cut -f 2 -d ' ' /var/lib/tor/fingerprint-ed25519
   register: _result
 
 - name: Set fact _fingerprint_ed25519
@@ -27,7 +29,8 @@
     - name: Get hashed fingerprint of a bridge
       changed_when: false
       ansible.builtin.command:
-        cmd: cut -f 2 -d ' ' /var/lib/tor/hashed-fingerprint
+        cmd: >-
+          cut -f 2 -d ' ' /var/lib/tor/hashed-fingerprint
       register: _result
 
     - name: Set fact _fingerprint_hashed
